<resources>
    <string name="app_name">TimeLine App</string>
    <string name="timeline_to_edit">timeline_to_edit</string>
    <string name="tasks_clear_all">Clear all tasks</string>
    <string name="menu_switch_show_completed_task">Show completed tasks</string>
    <string name="menu_show_old_tasks">Show old tasks</string>
    <string name="menu_show_future_tasks">Show future tasks</string>
    <string name="edit_tasks_dialog_title_message">Edit Task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_task_float_message">CURRENT TASKS</string>
    <string name="pop_up_window_switch_button_text">popup</string>
    <string name="tasks_repeat_text">repeat</string>
    <string name="tasks_set_remind_me_date_text">Remind me date</string>
    <string name="tasks_input_tasks_name_text">Input Your Task Here</string>
    <string name="timeline_repeat_text">Repeat</string>
    <string name="timeline_single_text">Single</string>
    <string name="channel_name">channel_name1</string>
    <string name="channel_description">channel_desc1</string>
    <string name="enable_vibrate_checkbox_text">Enable Vibrate</string>
    <string name="channel_name_keep_running">TimeLine Keep Running</string>
    <string name="channel_description_keep_running">Channel keep running now.</string>
    <string name="no_tasks_notification_text">No tasks</string>
</resources>
