<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/clear_all_tasks"
        android:title="@string/tasks_clear_all" ></item>

    <item
        android:id="@+id/menu_checkbox_show_old_tasks"
        android:title="@string/menu_show_old_tasks"
        app:showAsAction="never"
        android:orderInCategory="5"
        android:checkable="true"
        android:checked="false"
        app:actionViewClass="android.widget.CheckBox"
        />

    <item
        android:id="@+id/menu_checkbox_show_future_tasks"
        android:title="@string/menu_show_future_tasks"
        app:showAsAction="never"
        android:orderInCategory="5"
        android:checkable="true"
        android:checked="false"
        app:actionViewClass="android.widget.CheckBox"
        />

    <item
        android:id="@+id/show_completed_item"
        android:title="Switch"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
</menu>