<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_tasks_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tasks.taskslist.TasksFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_tasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <EditText
        android:id="@+id/et_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/tasks_input_tasks_name_text"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxRepeat"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rcv_tasks"
        tools:text="Input Your Task Here" />

    <CheckBox
        android:id="@+id/checkBoxRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tasks_repeat_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chipTaskPickDate"
        app:layout_constraintTop_toBottomOf="@+id/et_task" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipTaskPickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_set_remind_me_date_text"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxRepeat"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxRepeat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBoxRepeat" />

</androidx.constraintlayout.widget.ConstraintLayout>